Fix dark mode popup colours

--- a/static/base.css
+++ b/static/base.css
@@ -151,3 +151,9 @@ input, select {
     color: white;
     border: 2px solid #646464;
 }
+
+
+.dark-mode .popup {
+    color: black;
+    background-color: lightgrey;
+}
